# jboard

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md
.github/workflows/: ci.yml
backend/: Dockerfile  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/api/: api.go  api_test.go  auth.go  auth_test.go  boards.go  cards.go  columns.go  cors.go  fake_test.go  reminders.go  session.go  session_test.go  validation.go
backend/internal/config/: config.go  config_test.go
backend/internal/db/: db.go  db_integration_test.go
backend/internal/db/migrations/: 0001_init.down.sql  0001_init.up.sql
backend/internal/domain/: models.go
backend/internal/repository/: repository.go
backend/internal/scheduler/: scheduler.go  scheduler_test.go
backend/internal/whatsapp/: client.go  client_test.go
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: architecture.md  deploy.md  desktop-windows.md  setup-manual.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  api.test.ts  api.ts  main.ts  style.css  vite-env.d.ts
frontend/src/components/: ColumnView.test.ts  ColumnView.vue
infra/: .env.example  Caddyfile  Dockerfile.web  docker-compose.prod.yml  docker-compose.yml  fetch-qr.py  init-evolution-db.sql  list-groups.py  setup-evolution.sh  test-scheduler.py
